--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
         <h3>My First Website</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet tenetur, quam maiores animi eligendi ex cupiditate debitis reprehenderit eius libero.</p>
     </div>
+    <div>
+        <h3>My Second Website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet tenetur, quam maiores animi eligendi ex cupiditate debitis reprehenderit eius libero.</p>
+    </div>
+    <div>
+        <h3>My Third Website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet tenetur, quam maiores animi eligendi ex cupiditate debitis reprehenderit eius libero.</p>
+    </div>
+
 </body>
 </html>
