--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         <h3>My Third Website</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet tenetur, quam maiores animi eligendi ex cupiditate debitis reprehenderit eius libero.</p>
     </div>
+    <div>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 
 </body>
 </html>
