added incremental line

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet tenetur, quam maiores animi eligendi ex cupiditate debitis reprehenderit eius libero.</p>
     </div>
     <div>
+        <h3>how to add incremental push</h3>
         <ul>
             <li>git add .</li>
             <li>git commit -m"add a meaningful commit message"</li>
